login and register

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ Data/CovLineage/.ipynb_checkpoints/
 Data_preprocessing/.ipynb_checkpoints/
 Data/NCBI_virus/aa/
 Data/NCBI_virus/nucleotide/
+neo4j-flask/neo4j-env/
